[gd_scene load_steps=96 format=2]

[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_26.png" type="Texture" id=1]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_35.png" type="Texture" id=2]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_38.png" type="Texture" id=3]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_40.png" type="Texture" id=4]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_53.png" type="Texture" id=5]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_13.png" type="Texture" id=6]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_22.png" type="Texture" id=7]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_19.png" type="Texture" id=8]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_02.png" type="Texture" id=9]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_07.png" type="Texture" id=10]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_37.png" type="Texture" id=11]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_27.png" type="Texture" id=12]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_36.png" type="Texture" id=13]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_42.png" type="Texture" id=14]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_03.png" type="Texture" id=15]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_31.png" type="Texture" id=16]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_23.png" type="Texture" id=17]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_44.png" type="Texture" id=18]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_45.png" type="Texture" id=19]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_28.png" type="Texture" id=20]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_39.png" type="Texture" id=21]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_43.png" type="Texture" id=22]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_12.png" type="Texture" id=23]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_29.png" type="Texture" id=24]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_18.png" type="Texture" id=25]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_46.png" type="Texture" id=26]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_47.png" type="Texture" id=27]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_50.png" type="Texture" id=28]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_11.png" type="Texture" id=29]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_51.png" type="Texture" id=30]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_52.png" type="Texture" id=31]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_25.png" type="Texture" id=32]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_56.png" type="Texture" id=33]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_57.png" type="Texture" id=34]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_58.png" type="Texture" id=35]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_00.png" type="Texture" id=36]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_01.png" type="Texture" id=37]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_04.png" type="Texture" id=38]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_49.png" type="Texture" id=39]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_55.png" type="Texture" id=40]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_05.png" type="Texture" id=41]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_21.png" type="Texture" id=42]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_10.png" type="Texture" id=43]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_41.png" type="Texture" id=44]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_59.png" type="Texture" id=45]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_14.png" type="Texture" id=46]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_48.png" type="Texture" id=47]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_54.png" type="Texture" id=48]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_17.png" type="Texture" id=49]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_09.png" type="Texture" id=50]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_24.png" type="Texture" id=51]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_30.png" type="Texture" id=52]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_32.png" type="Texture" id=53]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_06.png" type="Texture" id=54]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_15.png" type="Texture" id=55]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_33.png" type="Texture" id=56]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_34.png" type="Texture" id=57]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_16.png" type="Texture" id=58]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_08.png" type="Texture" id=59]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_20.png" type="Texture" id=60]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_62.png" type="Texture" id=61]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_63.png" type="Texture" id=62]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_64.png" type="Texture" id=63]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_65.png" type="Texture" id=64]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_60.png" type="Texture" id=65]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_61.png" type="Texture" id=66]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_85.png" type="Texture" id=67]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_67.png" type="Texture" id=68]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_87.png" type="Texture" id=69]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_70.png" type="Texture" id=70]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_66.png" type="Texture" id=71]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_80.png" type="Texture" id=72]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_88.png" type="Texture" id=73]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_89.png" type="Texture" id=74]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_69.png" type="Texture" id=75]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_74.png" type="Texture" id=76]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_86.png" type="Texture" id=77]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_71.png" type="Texture" id=78]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_72.png" type="Texture" id=79]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_81.png" type="Texture" id=80]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_73.png" type="Texture" id=81]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_78.png" type="Texture" id=82]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_75.png" type="Texture" id=83]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_77.png" type="Texture" id=84]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_68.png" type="Texture" id=85]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_83.png" type="Texture" id=86]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_79.png" type="Texture" id=87]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_82.png" type="Texture" id=88]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_84.png" type="Texture" id=89]
[ext_resource path="res://external/aseprite/logo/palette_adjusted logo animation_76.png" type="Texture" id=90]
[ext_resource path="res://logo_intro.gd" type="Script" id=91]
[ext_resource path="res://ldjam48theme.tres" type="Theme" id=92]
[ext_resource path="res://external/sunvox/sfx/fancy logo sfx.ogg" type="AudioStream" id=93]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 54 ), ExtResource( 10 ), ExtResource( 59 ), ExtResource( 50 ), ExtResource( 43 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 46 ), ExtResource( 55 ), ExtResource( 58 ), ExtResource( 49 ), ExtResource( 25 ), ExtResource( 8 ), ExtResource( 60 ), ExtResource( 42 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 51 ), ExtResource( 32 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 52 ), ExtResource( 16 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 21 ), ExtResource( 4 ), ExtResource( 44 ), ExtResource( 14 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 47 ), ExtResource( 39 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 5 ), ExtResource( 48 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 45 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 71 ), ExtResource( 68 ), ExtResource( 85 ), ExtResource( 75 ), ExtResource( 70 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 81 ), ExtResource( 76 ), ExtResource( 83 ), ExtResource( 90 ), ExtResource( 84 ), ExtResource( 82 ), ExtResource( 87 ), ExtResource( 72 ), ExtResource( 80 ), ExtResource( 88 ), ExtResource( 86 ), ExtResource( 89 ), ExtResource( 67 ), ExtResource( 77 ), ExtResource( 69 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "show_logo"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("center_container/control/animated_sprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("center_container/control/animated_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("center_container/control/animated_sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("animation_player/audio_stream_player:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="logo_intro" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 92 )
script = ExtResource( 91 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_container" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2

[node name="control" type="Control" parent="center_container"]
margin_left = 320.0
margin_top = 180.0
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2

[node name="animated_sprite" type="AnimatedSprite" parent="center_container/control"]
modulate = Color( 1, 1, 1, 0 )
frames = SubResource( 1 )

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/show_logo = SubResource( 2 )

[node name="audio_stream_player" type="AudioStreamPlayer" parent="animation_player"]
stream = ExtResource( 93 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
